# mvgarch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml  python-publish.yml
mvgarch/: mgarch.py  ugarch.py
mvgarch/optimized/: correlation.c  correlation.pyi  correlation.pyx
scripts/: bump_version.sh
src/mvgarch/: mgarch.py
tests/: test.py  test_mgarch.py  test_ugarch.py
