[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mvgarch"
version = "0.0.1"
authors = [
  { name="James J. Tobin", email="james_jackson.tobin@kcl.ac.uk" },
]
description = "Multivariate GARCH modelling in Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]

[project.urls]
"Homepage" = "https://github.com/jamesjtobin/mvgarch"
"Bug Tracker" = "https://github.com/jamesjtobin/mvgarch/issues"
