[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mvgarch"
version = "1.0.1"
authors = [
  { name="Jack Tobin", email="tobjack330@gmail.com" },
]
description = "Multivariate GARCH modelling in Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "arch",
  "pmdarima",
  "scipy",
]

[project.urls]
"Homepage" = "https://github.com/jamesjtobin/mvgarch"
"Bug Tracker" = "https://github.com/jamesjtobin/mvgarch/issues"
