[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mvgarch"
version = "1.2.2"
authors = [
  { name="Jack Tobin", email="tobjack330@gmail.com" },
]
description = "Multivariate GARCH modelling in Python"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
  "matplotlib",
  "numpy",
  "pandas",
  "arch",
  "pmdarima",
  "scipy",
]

[project.urls]
"Homepage" = "https://github.com/jamesjtobin/mvgarch"
"Bug Tracker" = "https://github.com/jamesjtobin/mvgarch/issues"

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["D"]
"**/{tests,docs,tools}/*" = ["ANN", "PT009", "PT027", "S101", "NPY"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101", "ANN102", "Q000", "D105", "EM101", "EM102", "BLE001", "TCH003",
    "TRY003", "SLOT000", "TCH002", "D101", "D102", "D103", "PLR2004",
    "D107", "N806", "SLF001", "D100",
]
